data/derived/sp14/progs/unify/prog2824.ml.out
Characters 169-181:
  | [] -> (sum/10)::(sum mod 10) in
                    ^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
